Blurb box cut off of right side of screen, fixed

--- a/src/BlurbBox.css
+++ b/src/BlurbBox.css
@@ -3,7 +3,6 @@
 #blurb-box {
 	margin: .25em;
 	padding: .25em;
-	min-width: 23em;
 	background-color: black;
 	background-color: #0008;
 	color: white;
